--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,8 @@
 version: "3.9"
 
 services:
-  x-app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    image: x-image
-    container_name: x-service
-    ports:
-      - 25:25
+  gitsync:
+    image: robtec/git-sync:4
+    container_name: gitsync
     environment:
       KEY: var
